tests/asm/error/header_unclosed_name_1st.s
.name "yea

h
.comment "hell yeah"

live	%1
